fixed package name

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
       "email": "ryan@codingintrigue.co.uk"
     }
   ],
-  "name": "jquery-sketch",
+  "name": "jquery-sketch-vitim",
   "optionalDependencies": {},
   "readme": "ERROR: No README data found!",
   "repository": {
